# logging-test

./: README.md  logging-test.cabal  logging_test.proto  shell.nix
nix/: sources.json
src/: Main.hs  Schema.hs
