name:               logging-test
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/logging-test#readme
author:             RJ
maintainer:         rj@booktoken.io
copyright:          2022 RJ
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

executable logging-test
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Schema
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      base            >=4.12  && <5
    , co-log
    , co-log-core
    , mtl
    , mu-grpc-server  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.1
    , text
    , transformers
